<?xml version="1.0" encoding="utf-8"?>
<!--Description: Display castle's images and choose date, time and number of passengers-->
<!--Author: Jirayut, Christoffer-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    tools:context=".BookingActivity">

    <TextView
        android:id="@+id/headerBooking2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="146dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="146dp"
        android:fontFamily="sans-serif"
        android:text="@string/booking"
        android:textColor="@color/White"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonBack3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:background="#00FFFFFF"
        android:fontFamily="sans-serif"
        android:text="@string/back"
        app:icon="@drawable/ic_back_svg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/castleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerBooking2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/castle_name"
        android:textColor="@color/White"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/totalPriceCastle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/castleName"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/castle_price"
        android:textColor="@color/White"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/totalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/totalPriceCastle"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="2dp"
        android:layout_toStartOf="@+id/totalPriceCastle"
        android:text="@string/total"
        android:textColor="@color/White"
        android:textSize="12sp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="236.5dp"
        android:layout_marginTop="100dp"
        android:scrollbarSize="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            android:elevation="40dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/image_View1"
                android:layout_width="318dp"
                android:layout_height="220dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="5dp"
                android:elevation="40dp"
                app:cardCornerRadius="25dp">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/headerBooking2"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:elevation="15dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/ic_logo2_background"
                    android:contentDescription="@string/image_view1" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/image_View2"
                android:layout_width="318dp"
                android:layout_height="220dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="5dp"
                android:elevation="40dp"
                app:cardCornerRadius="25dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/headerBooking2"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:elevation="15dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/ic_logo2_background"
                    android:contentDescription="@string/image_view2" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </HorizontalScrollView>

    <!-- Functionality to get date: https://www.tutlane.com/tutorial/android/android-timepicker-with-examples -->

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/pop_up_box_bg"
        android:elevation="40dp"
        app:elevation="40dp"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/bottom_nav_menu" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="434dp"
        android:layout_below="@+id/headerBooking2"
        android:layout_marginTop="299dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background3_sub"
            android:orientation="vertical"
            android:paddingBottom="-50dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginLeft="38dp"
                android:layout_marginTop="10dp"
                android:text="@string/date"
                android:textColor="@color/DarkGrey"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <DatePicker
                android:id="@+id/datePicker1"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="-15dp"
                android:layout_marginEnd="0dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="-15dp"
                android:text="@string/time"
                android:textColor="@color/DarkGrey"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <TimePicker
                android:id="@+id/timePicker1"
                android:layout_width="300dp"
                android:layout_height="148dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="-15dp"
                android:layout_marginEnd="0dp"
                android:timePickerMode="spinner" />

            <TextView
                android:id="@+id/passengerText"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="-5dp"
                android:layout_marginRight="95dp"
                android:text="@string/booking_passengers"
                android:textColor="@color/DarkGrey"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <Spinner
                android:id="@+id/spinner_passengers"
                style="@style/SpinnerTheme"
                android:layout_width="217dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="135dp"
                android:layout_marginTop="-20dp"
                android:layout_marginEnd="45dp"
                android:dropDownVerticalOffset="-115dp"
                android:popupBackground="@drawable/popup_dropdown_bg"
                android:popupElevation="20dp"
                android:spinnerMode="dropdown"
                android:textAlignment="center"
                android:theme="@style/DarkTheme" />

            <Button
                android:id="@+id/button1"
                style="@style/ButtonGradient"
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_colour"
                android:elevation="15dp"
                android:text="@string/next"
                android:textColor="@color/White"
                android:textSize="20sp"
                app:cornerRadius="35dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



</RelativeLayout>